--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,3 @@
 PORT=8080
+TRUSTED_URL='https://eliphazelephuz.onrender.com'
 MONGO_URI='mongodb+srv://Eliphazelephuz:eliphazposts@cluster0.l5gkmb7.mongodb.net/?retryWrites=true&w=majority'
