--- a/trial3/package.json
+++ b/trial3/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.6.3",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "video.js": "^8.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
